--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "4life-website",
   "version": "0.1.0",
+  "homepage": "http://imunsehat.id/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
